--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
 
    <img class="bird" src="https://imgs.search.brave.com/mDlCBi-mUpnib2XVGkWprdPERJInjD4dTBxBGLHIXn0/rs:fit:500:500:1/g:ce/aHR0cHM6Ly9tZWRp/YS5naXBoeS5jb20v/bWVkaWEvQ21yMU9N/SjJGTjBCMi9naXBo/eS5naWY.gif" alt="eldorado">
-   <center><a href="newindex.html"> Hello </a></center>
-   <center>
-<img class="press" src="images/press.png" alt="finger">
+   <center><a href="newindex.html"> Hello </a>
+<img class="press" src="https://em-content.zobj.net/source/microsoft-teams/337/backhand-index-pointing-left_1f448.png" alt="finger">
         </center>
 
 
