--- a/newindex.html
+++ b/newindex.html
@@ -8,12 +8,12 @@
   <body background-color:pink>
     <center>
 <h1 class="h1" style="font-family: cursive;" style="color:black">Hey there ! Good to see you </h1>
-<img src="images/smile.png" style="width:50px;"alt="smile">
+<img src="https://em-content.zobj.net/source/microsoft-teams/337/smiling-face-with-smiling-eyes_1f60a.png" style="width:50px;"alt="smile">
 <br>
 <br>
 </center/>
 <div class="profiles">
-  <h2>My facebook profile</h2> <img class="fb" src="images/facebook.webp" " alt="facebook_logo">
+  <h2>My facebook profile</h2> <img class="fb" src="https://png.pngtree.com/png-vector/20221018/ourmid/pngtree-facebook-social-media-icon-png-image_6315968.png" " alt="facebook_logo">
   <a class="fb" href="https://www.facebook.com/people/Lakshman-Chintalapudi/pfbid02DLt8pRcSPduiY7x3QhVYHg3RzkjeJAwc7D4CFoDH6uHxDPHMpgEtsp4b8VQGpvQhl/">My profile</a>
 </div>
 <h2>My</h2>
