--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="favicon.ico.ico">
 
   </head>
-  <body>
+  <body backgorund="yellow">
 <center>
     <div class="div1">
     <h1>Hi there! Welcome to my website</h1>
